[package]
name = "raop_play"
version = "0.0.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
alac-encoder = "^0.2.0"
base64 = "^0.13.0"
beefeater = "^0.1.1"
byteorder = "^1.3.1"
ctrlc = "^3.1.3"
docopt = "^1.1.0"
futures = "^0.3.0"
hex = "^0.4.0"
log = "^0.4.11"
openssl = { version = "^0.10.26", features = ["vendored"] }
openssl-sys = "^0.9.53"
rand = "^0.8.4"
serde = "^1.0.88"
serde_derive = "^1.0.88"
sha2 = "^0.10.8"
stderrlog = "^0.5.1"
tokio = { version = "^1.12.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
