[package]
name = "raop_play"
version = "0.0.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
aes = { version = "0.8.3", default-features = false }
alac-encoder = "^0.2.0"
async-executor = "1.8.0"
async-fs = "2.1.0"
async-io = "2.2.2"
async-lock = { version = "3.2.0", default-features = false }
async-net = "2.0.0"
base64 = "^0.13.0"
beefeater = "^0.1.1"
byteorder = "^1.3.1"
cbc = { version = "0.1.2", default-features = false, features = ["block-padding", "std"] }
ctr = "0.9.2"
ctrlc = "^3.1.3"
docopt = "^1.1.0"
ed25519-dalek = "2.1.0"
futures-lite = { version = "2.1.0", default-features = false }
hex = "^0.4.0"
log = "^0.4.11"
num-bigint-dig = { version = "0.8.4", default-features = false, features = ["std"] }
rand = "^0.8.4"
rsa = { version = "0.9.6", default-features = false }
serde = "^1.0.88"
serde_derive = "^1.0.88"
sha1 = "0.10.6"
sha2 = "^0.10.8"
stderrlog = "^0.5.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
