[package]
name = "raop_play"
version = "0.0.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
aes = { version = "0.8.4", default-features = false }
alac-encoder = "0.3.0"
base64 = "0.22.1"
beefeater = "0.1.1"
byteorder = "1.5.0"
cbc = { version = "0.1.2", default-features = false, features = ["block-padding", "std"] }
ctr = "0.9.2"
ctrlc = "3.5.1"
docopt = "1.1.1"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.28"
num-bigint-dig = { version = "0.8.5", default-features = false, features = ["std"] }
rand = "0.8.5"
rsa = { version = "0.9.8", default-features = false }
serde = "1.0.228"
serde_derive = "1.0.228"
sha1 = "0.10.6"
sha2 = "0.10.9"
stderrlog = "0.6.0"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
